syntax = "proto3";
import "google/api/any.proto";

option go_package = "single/filter";

// generic filter
message Filter {
  string main_filter = 1;
  repeated string ids = 2;
  repeated condition conditions = 3;
}

message condition {
  string field_name = 1;
  operator operator = 2;
  google.protobuf.Any value = 3;
  bool not = 4;
}

message Sorting {
  string field_name = 1;
  direction direction = 2;
}

enum direction {
  ASC = 0;
  DESC = 1;
}

enum operator {
  Equals = 0;
  Contains = 1;
  Starts = 2;
  In = 3;
  Gt = 4;
  Gte = 5;
  Lt = 6;
  Lte = 7;
}
