syntax = "proto3";

package service;
import "google/protobuf/descriptor.proto";

option go_package = "github.com/linksoft-dev/single/comps/go/grpc/plugins/service/pb";

extend google.protobuf.MessageOptions {
  bool crud = 1000;
}

extend google.protobuf.FieldOptions {
  Field field = 1001;
}

enum Boolean {
  UNSPECIFIED = 0;
  YES = 1;
  NO = 2;
}

message Field {
  Boolean upperNoSpaceNoAccent = 1;
  Boolean upperCase = 2;
  Boolean trimSpace = 3;
  Boolean removeAccent = 4;

}